compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__same_imports_multiple_times_1.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\n        import one\n        import two as one\n        "
---
----- SOURCE CODE
-- one.gleam

            pub fn fn1() { 1 }
            

-- two.gleam

            pub fn fn2() { 1 }
            

-- main.gleam

        import one
        import two as one
        

----- ERROR
error: Duplicate import
  ┌─ /src/one/two.gleam:3:9
  │
2 │         import one
  │         ---------- First imported here
3 │         import two as one
  │         ^^^^^^^^^^^^^^^^^ Reimported here

`one` has been imported multiple times.
Names in a Gleam module must be unique so one will need to be renamed.
